--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,131 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+        <item name="android:editTextBackground">@drawable/apptheme_edit_text_holo_light</item>
+        <item name="android:listViewStyle">@style/AppTheme.LightBlueBackground</item>
+        <item name="android:gridViewStyle">@style/AppTheme.LightBlueBackground.GridView</item>
+    </style>
+
+    <style name="AppTheme.LightBlueBackground">
+        <item name="android:background">@color/light_blue_background</item>
+        <item name="divider">@null</item>
+    </style>
+
+    <style name="AppTheme.LightBlueBackground.GridView">
+        <item name="android:padding">@dimen/user_grid_spacing</item>
+    </style>
+
+    <style name="AuthBackground">
+        <item name="android:background">@drawable/backgroundfobi_fill</item>
+    </style>
+
+    <style name="AuthLinearStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_below">@+id/textViewSubtitle</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginTop">@dimen/login_vertical_margin</item>
+        <item name="android:layout_marginLeft">@dimen/activity_horizontal_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_horizontal_margin</item>
+        <item name="android:paddingTop">@dimen/login_horizontal_padding</item>
+        <item name="android:paddingLeft">@dimen/login_vertical_padding</item>
+        <item name="android:paddingRight">@dimen/login_vertical_padding</item>
+        <item name="android:paddingBottom">@dimen/login_horizontal_padding</item>
+        <item name="android:background">@color/alphawhite</item>
+    </style>
+
+    <style name="btnSignStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_below">@+id/editTextLayout</item>
+        <item name="android:background">@drawable/buttom_custom</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="EditTextStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_below">@+id/passwordField</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:textColorHint">@color/icons</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="AppTheme.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="TitleStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_alignParentTop">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_marginTop">32dp</item>
+        <item name="android:textSize">80sp</item>
+        <item name="android:textColor">@color/icons</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="SubtitleStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_below">@+id/textViewTitle</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="BotonLoginStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_below">@+id/editTextLayout</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:background">@drawable/buttom_custom</item>
+        <item name="android:layout_marginLeft">@dimen/activity_vertical_margin</item>
+        <item name="android:layout_marginRight">@dimen/activity_vertical_margin</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="TextoRegistroStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:layout_marginTop">45dp</item>
+        <item name="android:layout_below">@+id/loginButton</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="ProgressBarStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:visibility">invisible</item>
+        <item name="android:layout_above">@+id/signUpText</item>
+        <item name="android:layout_centerHorizontal">true</item>
+    </style>
+
+    <style name="ButtonDividerStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_below">@+id/editTextLayout</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_alignBottom">@+id/cancel_Button</item>
+    </style>
+
+    <style name="ProgressBarSignStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:visibility">invisible</item>
+        <item name="android:layout_below">@+id/cancel_Button</item>
     </style>
 
 </resources>
